@@ -1,3 +1,11 @@
+2001-07-05  Ben Elliston  <bje@redhat.com>
+
+	* Makefile.am (CPUDIR): Define.
+	(stamp-m32r): Update dependencies.
+	(stamp-fr30): Ditto.
+	(stamp-openrisc): Ditto.
+	* Makefile.in: Regenerate.
+
 2001-07-03  Zoltan Hidvegi <hzoli@hzoli.2y.net>
 
 	* ppc-opc.c: Fix encoding of 'clf' instruction.
